# gRPC_perf_tests

./: .gitignore  CMakeLists.txt  Makefile  README.md  async_client.cc  async_server.cc  inference.proto
.cache/clangd/index/: async_client.cc.27B82EC2E0D58385.idx  async_server.cc.2FB670F06114F0AF.idx  inference.grpc.pb.cc.F13964232DD4B44D.idx  inference.grpc.pb.h.DC77CFC549D7EB90.idx  inference.pb.cc.6DBC6AE3B48079E1.idx  inference.pb.h.2A1433FB40E27359.idx
perfs/: analyze_folded.sh
perfs/v1/: ghz.txt  perf.data  performance_report.md  readme.txt  report.txt
perfs/v2/: ghz.txt  performance_report.md  report.txt
